--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         useLibrary 'android.test.runner'
-        useLibrary 'android.test.base'
-        useLibrary 'android.test.mock'
-
 
         testOptions {
-                    unitTests.returnDefaultValues = true
+            unitTests {
+                includeAndroidResources = true
+                returnDefaultValues = true
             }
+        }
     }
     buildTypes {
         release {
@@ -43,7 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation 'com.android.support.test:rules:1.0.2'
-
+    testImplementation 'org.robolectric:robolectric:4.0-alpha-3-SNAPSHOT'
+    
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
